changes for mobile

--- a/index.html
+++ b/index.html
@@ -11,28 +11,28 @@
     <title>Dhia Ammar</title>
 </head>
 <body>
-    <nav class="flex justify-between bg-indigo-600 py-5">
-        <h3 class="ml-10 text-4xl font-bold text-white">Dhia Ammar</h3>
-        <ul class="flex justify-between text-3xl w-6/12 mr-12 text-white">
+    <nav class="lg:flex justify-between bg-indigo-600 py-5">
+        <h3 class="ml-10 text-2xl lg:text-4xl font-bold text-white">Dhia Ammar</h3>
+        <ul class="justify-between text-xl lg:text-3xl w-6/12 mr-12 text-white hidden lg:flex">
             <li><a href="#webdev">Web Development</a> </li>
             <li><a href="#design">Design</a></li>
             <li><a href="#editing">Video Editing</a> </li>
         </ul>
     </nav>
-    <div id="head" class="mx-36">
-        <h4 class='text-5xl text-gray-300 mt-24 mb-5'> Hello, my name is</h4>
-        <h1 class="text-9xl text-indigo-600 mb-5 font-bold">Dhia Ammar</h1>
+    <div id="head" class="mx-8 lg:mx-36">
+        <h4 class='text-3xl lg:text-5xl text-gray-300 mt-24 mb-5'> Hello, my name is</h4>
+        <h1 class="text-7xl lg:text-9xl text-indigo-600 mb-5 font-bold">Dhia Ammar</h1>
         <div id="container">
-            <div class="text2 text-5xl text-gray-300 mb-3">I'm a <span id="text"></span><span id="cursor"></span></div>
+            <div class="text2 text-3xl lg:text-5xl text-gray-300 mb-3">I'm a <span id="text" class="text-indigo-600 font-medium"></span><span id="cursor"></span></div>
         </div>
-        <p class="text-xl text-gray-300 w-7/12 mb-10">I'm 21 years old. I started programming when I was 17. In May 2019 I started working on upwork as a freelance Video Editor and Translator. Then in 2020 I started getting into the world of web development. <br>
+        <p class="text-base lg:text-xl text-gray-300 max-w-screen-md mb-10">I'm 21 years old. I started programming when I was 17. In May 2019 I started working on upwork as a freelance Video Editor and Translator. Then in 2020 I started getting into the world of web development. <br>
         This is my portfolio website where you could look at my previous work and contact me.</p>
     </div>
     <section id="main">
         <div id="webdev" class="flex-row mb-10">
-            <h3 class="text-5xl text-indigo-600 text-center mb-5 font-semibold">Web Development</h3>
-            <div class="w-auto px-12 py-5 bg-gradient-to-bl from-indigo-900 to-indigo-500 rounded-2xl text-3xl card mx-auto">
-                <h5 class="text-center text-4xl mb-5 font-medium">Technologies</h5>
+            <h3 class="text-3xl lg:text-5xl text-indigo-600 text-center mb-5 font-semibold">Web Development</h3>
+            <div class="w-auto px-6 lg:px-12 py-5 bg-gradient-to-bl from-indigo-900 to-indigo-500 rounded-2xl text-xl lg:text-3xl card mx-auto">
+                <h5 class="text-center text-2xl lg:text-4xl mb-5 font-medium">Technologies</h5>
                 <ul>
                     <li>HTML</li>
                     <li>CSS</li> 
@@ -46,9 +46,9 @@
             </div>
         </div>
         <div id="design" class="flex-row mb-10">
-            <h3 class="text-5xl text-indigo-600 text-center mb-5 font-semibold">Design</h3>
-            <div class="w-auto px-12 py-5 bg-gradient-to-bl from-indigo-900 to-indigo-500 rounded-2xl text-3xl card mx-auto">
-                <h5 class="text-center text-4xl mb-5 font-medium">Programs</h5>
+            <h3 class="text-3xl lg:text-5xl text-indigo-600 text-center mb-5 font-semibold">Design</h3>
+            <div class="w-auto px-6 lg:px-12 py-5 bg-gradient-to-bl from-indigo-900 to-indigo-500 rounded-2xl  text-xl lg:text-3xl card mx-auto">
+                <h5 class="text-center text-2xl lg:text-4xl mb-5 font-medium">Programs</h5>
                 <ul>
                     <li>Adobe Photoshop</li>
                     <li>Adobe Illustrator</li>
@@ -58,9 +58,9 @@
             </div>
         </div>
         <div id="editing" class="flex-row mb-10">
-            <h3 class="text-5xl text-indigo-600 text-center mb-5 font-semibold">Video Editing</h3>
-            <div class="w-auto px-12 py-5 bg-gradient-to-bl from-indigo-900 to-indigo-500 rounded-2xl text-3xl card mx-auto">
-                <h5 class="text-center text-4xl mb-5 font-medium">Programs</h5>
+            <h3 class="text-3xl lg:text-5xl text-indigo-600 text-center mb-5 font-semibold">Video Editing</h3>
+            <div class="w-auto px-6 lg:px-12 py-5 bg-gradient-to-bl from-indigo-900 to-indigo-500 rounded-2xl text-xl lg:text-3xl card mx-auto">
+                <h5 class="text-center text-2xl lg:text-4xl mb-5 font-medium">Programs</h5>
                 <ul>
                     <li>Adobe Premiere Pro</li>
                     <li>Davinci Resolve</li>
