fixed linkedin link

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <h4 class="mb-5 lg:mb-0">Contact Me:</h4>
             <a href="mailto:dhiaammar@mail.com" class="hover:text-red-500 mb-5 lg:mb-0"><span class="iconify" data-icon="feather:mail" data-inline="false"></span></a>
             <a href="https://www.upwork.com/freelancers/~01fed618c92986f998" target="_blank" class="hover:text-green-400 mb-5 lg:mb-0"><span class="iconify" data-icon="cib:upwork" data-inline="false"></span></a>
-            <a href="https://www.upwork.com/freelancers/~01fed618c92986f998" target="_blank" class="hover:text-blue-400 mb-5 lg:mb-0"><span class="iconify" data-icon="akar-icons:linkedin-fill" data-inline="false"></span></a>
+            <a href="https://www.linkedin.com/in/dhia-a-b659bb128/" target="_blank" class="hover:text-blue-400 mb-5 lg:mb-0"><span class="iconify" data-icon="akar-icons:linkedin-fill" data-inline="false"></span></a>
             <a href="https://github.com/dhiaammar1999" target="_blank" class="hover:text-black "><span class="iconify" data-icon="akar-icons:github-fill" data-inline="false"></span></a>
 
         </div>
